This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: PyObject_Print() doesn't always return -1 on error
Type: behavior Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-10-05 23:05 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9733 merged ZackerySpytz, 2018-10-05 23:08
PR 9739 merged miss-islington, 2018-10-06 06:44
PR 9740 merged miss-islington, 2018-10-06 06:44
Messages (5)
msg327197 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-10-05 23:05
PyObject_Print() returns 0 if PyUnicode_AsEncodedString() fails.
msg327229 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-06 06:44
New changeset ae62f015240c9162773341a9922794e6b960779d by Serhiy Storchaka (Zackery Spytz) in branch 'master':
bpo-34910: Ensure that PyObject_Print() always returns -1 on error. (GH-9733)
https://github.com/python/cpython/commit/ae62f015240c9162773341a9922794e6b960779d
msg327231 - (view) Author: miss-islington (miss-islington) Date: 2018-10-06 07:06
New changeset 177254c96f9258a62e3e571c2aee0b642070a374 by Miss Islington (bot) in branch '3.6':
bpo-34910: Ensure that PyObject_Print() always returns -1 on error. (GH-9733)
https://github.com/python/cpython/commit/177254c96f9258a62e3e571c2aee0b642070a374
msg327232 - (view) Author: miss-islington (miss-islington) Date: 2018-10-06 07:07
New changeset 49fb49d6f57661f2a7601f1d759163866f707fed by Miss Islington (bot) in branch '3.7':
bpo-34910: Ensure that PyObject_Print() always returns -1 on error. (GH-9733)
https://github.com/python/cpython/commit/49fb49d6f57661f2a7601f1d759163866f707fed
msg327233 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-06 07:11
Thank you Zackery for catching such kind of errors.
History
Date User Action Args
2022-04-11 14:59:06adminsetgithub: 79091
2018-10-06 07:11:01serhiy.storchakasetstatus: open -> closed
resolution: fixed
messages: + msg327233

stage: patch review -> resolved
2018-10-06 07:07:15miss-islingtonsetmessages: + msg327232
2018-10-06 07:06:58miss-islingtonsetnosy: + miss-islington
messages: + msg327231
2018-10-06 06:44:45miss-islingtonsetpull_requests: + pull_request9127
2018-10-06 06:44:37miss-islingtonsetpull_requests: + pull_request9126
2018-10-06 06:44:29serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg327229
2018-10-05 23:08:19ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request9119
2018-10-05 23:05:07ZackerySpytzcreate