bpo-34910: Ensure that PyObject_Print() always returns -1 on error. (GH-9733)

(cherry picked from commit ae62f015240c9162773341a9922794e6b960779d)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>